--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "ngprogress-lite": "~1.0.6",
     "ng-ladda-bootstrap": "*",
     "spin.js": "~1.3.2",
-    "highcharts-ng": "~0.0.7"
+    "highcharts-ng": "~0.0.7",
+    "hull.js": "0.8.46"
   },
   "exportsOverride": {
     "angular": {
@@ -97,6 +98,8 @@
     }
   },
   "resolutions": {
-    "angular": "1.3.0-beta.5"
+    "angular": "1.3.0-beta.5",
+    "requirejs": "2.1.11",
+    "jquery": ">=2"
   }
 }
